siril 1.2.0-beta3
xx/xx/xx

* Fixed crash in seqstarnet when processing single-file sequences (SER, FITSEQ)
* Fixed hang in seqstarnet when processing a single-file sequence with no star mask
* Fixed using default masters names in calibrate (GUI)
* Fixed invoking external programs in CLI mode (Windows only)
* Fixed stream setting for all versions of ffmpeg (mp4 export crash)
* Added special formatter to parse date-time in path parsing
* Changed Windows to build in console mode even for stable releases
* Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
* Improved clipping model in luminance-based GHS stretches
* Added GHS saturation stretch mode
* Fix UI and command issues in deconvolution code
* Print help and deconvolution tips URLs to the log

siril 1.2.0-beta2
03/12/23

* Fixed behavior on Windows when calling external programs (StarNet, astrometry.net)
* Fixed crash when converting sequence to SER
* Fixed PCC progress bar which never terminated
* Fixed AppImage Build
* Fixed crash when using deconvolution on a sequence
* Fixed SSL certificates locations on Windows which where preventing SearchObject related functions to succeed
* Fixed reading BAYERPAT key if it was set to NONE
* Fixed StarNet behavior when TIFF compression was ON
* Fixed crash in synthstar (full resynthetize and desaturate)
* Fixed handling widechars in config files (Windows only) which caused a crash at startup
* Fixed crash when selecting datapoints in Plot tab
* Fixed crash when sending a seqplatesolve or seqstarnet command with no other argument
* Fixed crash in global and 2pass registration, if a selection was active and the sequence had variable image sizes
* Fixed min and max framing borders calculations if the sequence had variable image sizes
* Fixed lost metadata with starnet
* Reworked GHS commands
* Added a warning when trying to read one-frame SER files
* Autodetect libfftw threading support