@@ -6,6 +6,7 @@ xx/xx/xx
 * Fixed using default masters names in calibrate (GUI)
 * Fixed invoking external programs in CLI mode (Windows only)
 * Fixed stream setting for all versions of ffmpeg (mp4 export crash)
+* Fixed crash when doing manual registration of sequence with variable image sizes (now disabled)
 * Added special formatter to parse date-time in path parsing
 * Changed Windows to build in console mode even for stable releases
 * Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
